# scoop-embeddings

./: CMakeLists.txt  README.md
examples/ollama-word-play/: CMakeLists.txt  README.md
examples/ollama-word-play/data/: inputs.txt
examples/ollama-word-play/src/: main.cpp
include/Scoop/Vectors/: Serialize.hpp  Vector.hpp  VectorStore.hpp
